# learn-you-a-haskell-exercises

exercises.hsproj/: .uuid
exercises.hsproj/learnyouahaskellexercises/: HS01_starting_out.hs  _HS01_starting_out.hsplay  learnyouahaskellexercises.cabal
